# local-multiagent-chat

./: README.md  prototype_multiagent_1h.md  pyproject.toml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
mini_agents/: .env.example  README.md  __init__.py  __main__.py  main.py  requirements.txt  roles.py
mini_agents/prompts/: critic.txt  executor.txt  final.txt  planner.txt
mini_agents_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
